--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Official SonarQube Scan
+name: SonarQube Scan Antonio's Test NOT official
 description: >
   Scan your code with SonarQube to detect Bugs, Vulnerabilities and Code Smells in up to 27 programming languages!
 branding:
